# BimodalHarness

./: .gitignore  Makefile  pyproject.toml
.claude/: CLAUDE.md  extensions.json
.claude/context/: index.json
.claude/tmp/: workflow-active
.context/: data-contract.md  index.json
.github/workflows/: ci.yml
data/: README.md  VERSION
data/samples/: test_formulas.jsonl  test_lean_export.jsonl
docs/architecture/: cross-repo-integration.md
scripts/: assemble_supervised_dataset.py  evaluate.py  evaluate_policy_network.py  extract_and_ingest.py  train.py  train_policy_network.py  train_value_network.py  validate_data.py
specs/: TODO.md  state.json
specs/001_implement_alphazero_proof_search_training_harness/: .return-meta.json
specs/002_initialize_python_project_structure/: .return-meta.json
specs/003_design_cross_repo_integration_architecture/: .return-meta.json
specs/004_define_training_data_schema_and_action_space/: .return-meta.json
specs/005_coordinate_bimodallogic_formula_and_proof_data_exports/: .return-meta.json
specs/006_validate_python_lean_bridge_options/: .return-meta.json
specs/007_build_static_data_ingestion_pipeline/: .return-meta.json
specs/008_implement_python_side_formula_generator/: .return-meta.json
specs/009_extract_supervised_training_data_from_existing_proofs/: .return-meta.json
specs/010_implement_patternkey_feature_extractor_in_python/: .return-meta.json
specs/011_implement_value_network_proof_progress_predictor/: .return-meta.json
specs/012_build_evaluation_benchmark_suite/: .return-meta.json
specs/013_integrate_value_network_with_lean_proof_search/: .postflight-pending  .return-meta.json
src/bimodal_harness/: __init__.py  (+1 more)
tests/: conftest.py  test_integration.py  test_schema.py  test_smoke.py
(+168 files in other folders)
