[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bimodal-harness"
version = "0.1.0"
description = "AlphaZero-style proof search training harness for bimodal logic"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "BimodalHarness Contributors" },
]
requires-python = ">=3.12"
dependencies = [
  "torch>=2.12.0",
  "numpy>=2.4.0",
  "z3-solver>=4.16.0.0",
  "datasets>=3.0.0",
  "wandb>=0.19.0",
  "model-checker==1.2.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.0",
  "ruff>=0.15.0",
  "mypy>=2.1.0",
]
lean = [
  "lean-interact>=0.11.0",
]
gpu = [
  # Install CUDA-enabled torch separately:
  # pip install torch --index-url https://download.pytorch.org/whl/cu124
]

[project.scripts]
bh-train = "bimodal_harness.scripts.train:main"
bh-evaluate = "bimodal_harness.scripts.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bimodal_harness"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-m 'not gpu and not lean'"
markers = [
  "gpu: tests requiring GPU hardware (skip in CPU-only CI)",
  "lean: tests requiring Lean 4 toolchain (skip if not installed)",
  "slow: slow tests (run with --run-slow flag)",
]
